--- a/src/components/ListOfLeagues/ListOfLeagues.module.scss
+++ b/src/components/ListOfLeagues/ListOfLeagues.module.scss
@@ -3,7 +3,7 @@
 .list_of_leagues {
   background-color: $color-grey-70;
   color: $color-grey-20;
-  padding: 8px 0 4px 0;
+  padding: 15px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
 }
