--- a/src/components/CountryMatches/CountryMatches.module.scss
+++ b/src/components/CountryMatches/CountryMatches.module.scss
@@ -7,7 +7,7 @@
   min-width: $country-list-MinWidth;
   max-width: $country-list-MaxWidth;
   width: 100%;
-  padding: 16px 8px;
+  padding: 16px;
   color: $color-grey-20;
   background-color: $color-grey-70;
   border-radius: 5px;
@@ -56,7 +56,7 @@
     width: 100%;
 
     &__open {
-      //   margin-bottom: 5px;
+        margin-bottom: 5px;
     }
   }
 }
